--- a/views/play.ejs
+++ b/views/play.ejs
@@ -24,56 +24,41 @@
         Lizard
         Spock</h1>
     </div>
-    <form id="game" action="/"method="post">
+      <form id="game" action="/play"method="post">
     <div class="score">
       <h3>Score</h3>
-      <h4 class="points scorez" id="points scorez">0</h4>
+        <h4 class="scorez" id="scorez"><%= score1 %></h4>
     </div>
   </div>
 
+  <h2 class="resultplay">Player Won!</h2>
 
 
 
+  <div class="containerz">
 
-  <div class="container">
-    <div class=" icons">
-      <div class="row">
-        <div class="col-paper">
-          <div class=" wraps wrapss wrap1">
-         <img class=" border paper start" src="images/icon-paper.svg" alt="" value= "paper"  type="submit">
-        </div>
-        </div>
-      </div>
 
       <div class="row">
         <div class="col-rock">
-          <div class=" wraps wrapss wrap2">
-            <img class="border rock start" src="images/icon-rock.svg" alt=""  value="rock" id="rock">
+          <div class=" wraps wrap2 wrapplay">
+            <img class="border rock borderplay" src="images/icon-<%= num2 %>.svg" alt="" >
           </div>
         </div>
         <div class="col-scissor">
-          <div class=" wraps wrapss wrap3">
-            <img class="border scissor start" src="images/icon-scissors.svg" alt="" value="scissors" >
+          <div class=" wraps wrap3 wrapplay">
+            <img class="border scissor borderplay" src="images/icon-scissors.svg" alt="" >
           </div>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-spock">
-          <div class="col wraps wrapss wrap4">
-            <img class="border spock start" src="images/icon-spock.svg" alt="" value="spock" >
-          </div>
-        </div>
-        <div class="col-lizard">
-          <div class="col wraps wrapss wrap5">
-            <img class="border lizard start" src="images/icon-lizard.svg" alt="" value="lizard" >
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="">
 
 
+<!-- <form class="again" action:"/play"method="post"> -->
+
+
+<button type="submit" class="rules again" action="/index.html"name="Play Again">Play Again</button>
+<!-- </form> -->
+</div>
 <button type="button"  onclick="openrules()"class="rules" name="button">Rules</button>
   <!-- You Picked
   The House Picked
@@ -90,15 +75,14 @@
     Rules
   </div> -->
 
-<div class="form-popup myForm" id="myForm" >
-  <label for="selectchoice">Location</label>
+<div class="form-popup myForm" id="myForm">
+  <label for="points">Location</label>
   <h5 id="h5">RULES</h5>
-<input type="text" name="selectchoice"  id="selectchoice">
-</form>
+<input type="text" name="points"  id="points">
   <img src="images/image-rules-bonus.svg" alt="">
   <img src="images/icon-close.svg" onclick="closeform()" class="closeforms" alt="">
 
-
+</form>
 <script type="text/javascript" src=javascript.js>
 
 </script>
