--- a/views/play.ejs
+++ b/views/play.ejs
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-  <h2 class="resultplay">Player Won!</h2>
+  <h2 class="resultplay"><%= winstatus %></h2>
 
 
 
@@ -46,11 +46,11 @@
         </div>
         <div class="col-scissor">
           <div class=" wraps wrap3 wrapplay">
-            <img class="border scissor borderplay" src="images/icon-scissors.svg" alt="" >
+            <img class="border scissor borderplay" src="images/icon-<%= npcpick %>.svg" alt="" >
           </div>
         </div>
       </div>
-<div class="">
+<div class="d">
 
 
 <!-- <form class="again" action:"/play"method="post"> -->
